Force Super-Linter to only check Python and JS
Configured Super-Linter to validate Python and JavaScript only, while disabling Java and all other languages.

--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -11,13 +11,20 @@ permissions:
 
 jobs:
   super-lint:
-    name: Super-Linter
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Run Super-Linter
         uses: super-linter/super-linter@v5
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+          # Only validate these languages
+          VALIDATE_PYTHON: true
+          VALIDATE_JAVASCRIPT: true
+
+          # Disable everything else
           VALIDATE_JAVA: false
+          VALIDATE_ALL_CODEBASE: false
