--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -5,10 +5,16 @@ on:
   push:
     branches: [ "main" ]
 
+permissions:
+  contents: read
+  security-events: write
+  actions: read
+
 jobs:
   bandit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Run Bandit
         uses: PyCQA/bandit-action@v1.0.1
